2008-05-22  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc: Move extra_info array and related functions
	from AptWorkerState to myCacheFile so that it is available more
	cleanly for myPolicy.  Updated all users.

2008-05-21  Marius Vollmer  <marius.vollmer@nokia.com>

	Ignore packages from the wrong domain. (N85300)

	* src/apt-worker.cc: Use CandidateVerIter instead of
	GetCandidateVer throughout to get the candidate version.  The
	latter will recompute the candidate on every call, which is not
	needed.
	(myPolicy): New, for implementing a custom version of
	GetCandidateVer.
	(myCacheFile): New, for installing a myPolicy object as the policy
	engine.
	(load_extra_info, ensure_extra_info): Renamed former to latter and
	changed so that it can be called at any time and more than once
	without harm.  This is needed because GetCandidateVer needs to
	load the domain information on demand.
	(set_sources_for_get_domain): New, use it instead of setting
	cur_sources directly.

2008-05-21  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/repo.cc (show_catalogue_dialog): Make sure that the packages
	cache is updated before showing the catalogues dialog (N85122).
	(ensure_cache_updated): Find out when the packages cache needs to
	be refreshed or not before showing the catalogues dialog (N85122).
	(ecu_reply): Shows the catalogues dialog as usual after a forced
	refreshing of the packages cache (N85122).

	* src/util.h, src/util.cc (load_last_update_time): New, moved from
	main.cc to be also used from util.cc (N85122).
	(save_last_update_time): New, moved from main.cc (N85122).
	(is_package_cache_updated): New function to find out whether the
	packages cache is up to date or not (N85122).

	* src/main.h, src/main.cc (load_last_update_time): Moved to
	util.cc (N85122).
	(save_last_update_time): Removed to util.cc (N85122).
	(maybe_refresh_package_cache_without_user): Use the new function
	is_package_cache_updated instead of the old code (N85122).