@@ -1,7 +1,7 @@
 hildon-application-manager (1:2.1.11~unreleased) unstable; urgency=low
 
   * Fixes: NB#80933, NB#84021, NB#85521, NB#85121, NB#85191, NB#85196.
-  * Fixes: NB#85387, NB#85447, NB#85122, NB#85300.
+  * Fixes: NB#85387, NB#85447, NB#85122, NB#85300, NB#83585.
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Mon, 28 Apr 2008 20:24:55 +0300
 
